    - Mail 
        - El token de verificacion no se comprobaba

- Admin
    - configuracion
        - Ahora la informacion del footer es configurables (vaciar la tabla config y usar db:seed)
        - Ahora para cargar cursadas y otros datos se usa la configuracion 'Año del ciclo actual'
    - Alumnos
        - se avisa si existe usuarios con el mismo numero de telefono
        - No se puede editar o crear si el mail ya esta en usando
    

--------------------------------------------------------------
15 de noviembre
--------------------------------------------------------------

- Admin
    - General
        - Ahora en algunos apartados no da error si se accede a un registro que no existe
        - Ya existe una confirmacion de borrado general, para los formularios con la clase ".form-eliminar"
            El html esta en resources/views/componentes/confirmacion
            Y su javascript en public/js/confirmacion
    - Alumnos
        - error al matricular al alumno, se hacia mal o no se hacia
    - Cursadas (carga masiva de datos)
        - Ahora se puede cambiar de carrera y seleccionar el año.
    - Inscriptos
        - ahora se pueden borrar


--------------------------------------------------------------
16 de noviembre
--------------------------------------------------------------

- Admin
    - rematriculacion
        - No se seteaban bien la condicion
        - Ya no se crea una nueva inscripcion
    - ajustes
        - test de copia de seguridad
    - Cursadas
        - El apartado de crear ahora funciona correctamente
        


- Admin
    - Mesas creacion masiva
        - Agregar validaciones (mesa en dia no habil, dia feriado, etc)
        - Solucionar/acomdar el problema del boton con el ancho en mesas/create. Cuando sale del div (dentro del form) se acomoda
-Profesores
    - Agregar footer


21/11
- muchas cosas que ya me olvide
- Cambie el diseño de la carga de cursadas en lote pq era muy dificil de leer
- Nuevas configuraciones y modo seguro